<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="100dp"
    android:background="#252836"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp"
        app:cardBackgroundColor="#FEA116"
        app:cardUseCompatPadding="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:weightSum="15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/imvBanner"
                android:layout_weight="8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/image" />
            <LinearLayout
                android:layout_weight="7"
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="#1F1D2B"
                android:orientation="vertical"
                android:paddingHorizontal="50dp"
                android:gravity="center"
                tools:layout_editor_absoluteY="25dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/logo_new" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Username"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/edtUsername"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:hint="Enter username ..."
                        android:textColor="@color/white"
                        android:textColorHint="#AFA5A5"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Password"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/edtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:inputType="textPassword"
                        android:hint="Enter password ..."
                        android:textColor="@color/white"
                        android:textColorHint="#AFA5A5"
                        android:textSize="16sp" />
                </LinearLayout>
                <TextView
                    android:visibility="gone"
                    android:id="@+id/txtErrorText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Login Success!"
                    android:textColor="#FEA116"
                    android:textSize="18sp" />
                <Button
                    android:id="@+id/btnLogin"
                    android:backgroundTint="#FEA116"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:text="Login" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>